--- a/astro-evolution-website/index.html
+++ b/astro-evolution-website/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./styles/index.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/8817e74290.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,9 +20,20 @@
 
 	<!-- WEBSITE MIDDLE -->
 	<p class="logo unselectable" id="title">ASTRO EVOLUTION</p>
-	<button onclick="moveDown()" class="center arrow unselectable" id="down">﹀</button>
+	<button onclick="moveDown()" class="downcenter arrow unselectable" id="down"><i class="fas fa-angle-double-down"></i></button>
 
 	<div class="page">
+		<div class="textSection" id="gameDownload">
+			<h2></h2>
+		</div>
+		<div class="textSection">
+			<h2>About the game</h2>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere error ex, temporibus obcaecati esse cupiditate nobis vel, aliquid quod ab amet. Quis animi mollitia voluptates veritatis corrupti, ratione eaque enim?</p>
+		</div>
+		<div class="textSection" id="Contact">
+			<h2>Contact</h2>
+			<p></p>
+		</div>
 
 	</div>
 	<!-- WEBSITE MIDDLE END -->
