--- a/astro-evolution-website/index.html
+++ b/astro-evolution-website/index.html
@@ -19,20 +19,33 @@
 
 
 	<!-- WEBSITE MIDDLE -->
-	<p class="logo unselectable" id="title">ASTRO EVOLUTION</p>
-	<button onclick="moveDown()" class="downcenter arrow unselectable" id="down"><i class="fas fa-angle-double-down"></i></button>
+	<div class="top">
+		<p class="logo unselectable" id="title">ASTRO EVOLUTION</p>
+		<button onclick="moveDown()" class="downcenter arrow unselectable" id="down"><i class="fas fa-angle-double-down"></i></button>
+	</div>
 
 	<div class="page">
-		<div class="textSection" id="gameDownload">
-			<h2></h2>
+		<div class="Section textsection" id="gameDownload">
+			<button type="button"> DOWNLOAD THE GAME </button>
 		</div>
-		<div class="textSection">
-			<h2>About the game</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere error ex, temporibus obcaecati esse cupiditate nobis vel, aliquid quod ab amet. Quis animi mollitia voluptates veritatis corrupti, ratione eaque enim?</p>
+		<div class="Section" id="pictures">
+			<img>
 		</div>
-		<div class="textSection" id="Contact">
+		<div class="Section textsection" id="about">
+			<div class="content">
+				<h2>About the game</h2>
+				<hr />
+				<br />
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere error ex, temporibus obcaecati esse cupiditate nobis vel, aliquid quod ab amet. Quis animi mollitia voluptates veritatis corrupti, ratione eaque enim?</p>
+			</div>
+		</div>
+		<div class="Section" id="pictures">
+			<img>
+		</div>
+		<div class="Section textsection" id="Contact">
 			<h2>Contact</h2>
-			<p></p>
+			<form>
+			</form>
 		</div>
 
 	</div>
