--- a/astro-evolution-website/index.html
+++ b/astro-evolution-website/index.html
@@ -9,13 +9,16 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/8817e74290.js" crossorigin="anonymous"></script>
+	<script src="JS/backgroundMove.js" defer></script>
 </head>
 
 <body>
 	<!-- WEBSITE TOP -->
 	<!--<img src="assets/header-background.jpg" id="header-background">-->
 	<!-- WEBSITE TOP END -->
+	<div class="overlay">
 
+	</div>
 
 
 	<!-- WEBSITE MIDDLE -->
@@ -28,10 +31,9 @@
 		<div class="Section textsection" id="gameDownload">
 			<button type="button"> DOWNLOAD THE GAME </button>
 		</div>
-		<div class="Section" id="pictures">
-			<img>
+		<div class="Section pic" id="pictures1">
 		</div>
-		<div class="Section textsection" id="about">
+		<div class="Section textsection notfirst" id="about">
 			<div class="content">
 				<h2>About the game</h2>
 				<hr />
@@ -39,10 +41,9 @@
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere error ex, temporibus obcaecati esse cupiditate nobis vel, aliquid quod ab amet. Quis animi mollitia voluptates veritatis corrupti, ratione eaque enim?</p>
 			</div>
 		</div>
-		<div class="Section" id="pictures">
-			<img>
+		<div class="Section" id="pictures2">
 		</div>
-		<div class="Section textsection" id="Contact">
+		<div class="Section textsection notfirst" id="Contact">
 			<h2>Contact</h2>
 			<form>
 			</form>
