--- a/astro-evolution-website/index.html
+++ b/astro-evolution-website/index.html
@@ -29,7 +29,7 @@
 
 	<div class="page">
 		<div class="Section textsection" id="gameDownload">
-			<button type="button"> DOWNLOAD THE GAME </button>
+			<button type="button"><a href="https://github.com/CoolJWB/AstroEvolution/releases/download/v0.2/astro-evolution-game.zip">DOWNLOAD THE GAME</a>  </button>
 		</div>
 		<div class="Section pic" id="pictures1">
 		</div>
