--- a/astro-evolution-website/index.html
+++ b/astro-evolution-website/index.html
@@ -17,7 +17,7 @@
 	<!--<img src="assets/header-background.jpg" id="header-background">-->
 	<!-- WEBSITE TOP END -->
 	<div class="overlay">
-
+		<i class="fas fa-play-circle"></i>
 	</div>
 
 
@@ -38,15 +38,33 @@
 				<h2>About the game</h2>
 				<hr />
 				<br />
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere error ex, temporibus obcaecati esse cupiditate nobis vel, aliquid quod ab amet. Quis animi mollitia voluptates veritatis corrupti, ratione eaque enim?</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod velit quis dui malesuada mattis. Quisque vestibulum lectus magna, vitae maximus mi aliquet ut. Aenean viverra dui ipsum, at pretium elit ullamcorper quis. Aliquam ac lectus nec risus mattis luctus. Proin sollicitudin nulla id tincidunt vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec mauris ante, pellentesque id quam eu, tincidunt fringilla ipsum. Integer tempus, est sed vestibulum congue, velit dui pellentesque sem, a blandit dolor massa ultrices lacus. Phasellus malesuada, est non luctus condimentum, nisl odio efficitur purus, a molestie magna nisi porta nulla. Fusce rutrum est erat, non faucibus risus luctus quis.</p>
 			</div>
 		</div>
 		<div class="Section" id="pictures2">
 		</div>
 		<div class="Section textsection notfirst" id="Contact">
 			<h2>Contact</h2>
+			<div class="container">
 			<form>
+				<label for="fname">First Name</label>
+				<input type="text" id="fname" name="firstname" placeholder="Your name...">
+
+				<label for="lname">Last Name</label>
+				<input type="text" id="lname" name="lastname" placeholder="Your last name...">
+
+				<label for="email">Email</label>
+				<input type="email" id="email" name="epost" placeholder="Your email...">
+
+				<label for="subj">Subject</label>
+				<input type="text" id="subj" name="subject" placeholder="The subject...">
+
+				<label for="message">Your message</label>
+				<textarea id="message" name="message" placeholder="Your message here..."></textarea>
+
+				<input type="submit" value="Send message">
 			</form>
+		</div>
 		</div>
 
 	</div>
@@ -55,6 +73,12 @@
 
 
 	<!-- WEBSITE BOTTOM -->
+	<footer>
+		<div></div>
+		<div>AstroEvolution</div>
+		<div></div>
+	</footer>
+
 	<!-- The bottom list of links to social media places -->
 	<ul id="bottomNavbar">
 		<li><a href="https://twitter.com/astro_evolution"><i class="fa fa-twitter" style="color:#00ACEE"></i></a></li>
